# shelly-bulk-control

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_tests.sh  setup.py  test_group_cli.py  test_grouping_cli.sh
config/: api_config.ini  device_types.yaml  parameter_mappings.yaml
config/device_capabilities/: Mini1G3.yaml  Mini1PMG3.yaml  Plus1PM.yaml  Plus1PMMini.yaml  Plus2PM.yaml  PlusPlugS.yaml  Pro3.yaml  SHDM-2.yaml  SHGS-1.yaml  SHPLG-S.yaml  SHRGBW2.yaml  SHSW-1.yaml  SHSW-25.yaml  SHSW-PM.yaml
data/groups/: groups.yaml  kitchen.yaml  living_room.yaml  outdoor.yaml
docker/: Dockerfile  docker-compose.yml  shelly-manager-api.service
documentation/: API_Examples.md  API_Service.md  API_Service_Deployment.md  Device_Capabilities.md  Device_Discovery.md  Device_Grouping.md  Group_Operations.md  Next_Steps.md  Parameter_Management.md  README.md  Shelly_Device_Generations.md  Shelly_Device_Manager_Specification.md  Testing.md  Troubleshooting.md
scripts/: debug_devices.py  disable_eco_mode.py  discover_capabilities.py  run_api_server.ps1  run_api_server.py  start_api_dev.ps1  start_api_dev.sh  targeted_disable_eco_mode.py  test_api_client.ps1  test_api_client.py  update_eco_mode.py
src/shelly_manager/config_manager/: config_manager.py
src/shelly_manager/discovery/: discovery_service.py
src/shelly_manager/grouping/: __init__.py  command_service.py  group_manager.py  group_service.py  models.py
src/shelly_manager/models/: device.py  device_capabilities.py  device_config.py  device_registry.py  device_schema.py  group.py  parameter_mapping.py  parameters.py
src/shelly_manager/parameter/: parameter_service.py
src/shelly_manager/utils/: __init__.py  (+3 more)
tests/: README.md  test_capability_discovery_integration.py  test_cli_grouping.py  test_device_capabilities.py  test_device_config.py  test_device_registry.py  test_direct_group_operations.py  test_group_concurrency.py  test_group_file_handling.py  test_group_operations.py  test_grouping.py  test_grouping_cli.sh  test_integration.py  test_parameter_extraction.py  test_parameter_mapping.py
(+11 files in other folders)
