[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shelly-manager"
version = "0.1.0"
authors = [
    { name="Robert Wunsch", email="wunsch@gmx.de" },
]
description = "A tool for managing Shelly devices"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "zeroconf>=0.131.0",
    "pydantic>=2.4.2",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "pyyaml>=6.0.1",
    "aiohttp>=3.9.1",
    "python-multipart>=0.0.6",
    "aiocoap>=0.4.6"
]

[project.scripts]
shelly-manager = "shelly_manager.interfaces.cli.main:app"

[project.urls]
"Homepage" = "https://github.com/rwunsch/shelly-bulk-control"
"Bug Tracker" = "https://github.com/rwunsch/shelly-bulk-control/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["shelly_manager*"] 